--- a/app/src/main/res/layout/activity_one_way_data_binding.xml
+++ b/app/src/main/res/layout/activity_one_way_data_binding.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="viewModel"
-            type="com.valleytech.databindingdemo.OneWayDataBindingViewModel" />
+            type="com.valleytech.databindingdemo.onewaydatabinding.OneWayDataBindingViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
