--- a/app/src/main/res/layout/activity_databinding_with_view_model.xml
+++ b/app/src/main/res/layout/activity_databinding_with_view_model.xml
@@ -1,30 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:app="http://schemas.android.com/apk/res-auto"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
         <variable
-            name="user"
-            type="com.valleytech.databindingdemo.User" />
+            name="viewModel"
+            type="com.valleytech.databindingdemo.databindingwithviewmodel.DatabindingWithViewModel" />
+
     </data>
 
-    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".basicdatabinding.BasicBindingActivity">
+        tools:context=".MainActivity">
 
         <TextView
             android:id="@+id/label_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@{user.name}"
-            android:textSize="26sp"
+            android:text="@{viewModel.name}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            tools:text="Hello World!" />
+            tools:text="DummyText" />
 
         <Button
             android:id="@+id/btn_click"
@@ -33,7 +34,6 @@
             android:text="Change Value"
             app:layout_constraintStart_toStartOf="@+id/label_text"
             app:layout_constraintTop_toBottomOf="@+id/label_text" />
-
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
