--- a/app/src/main/res/layout/activity_observer_field.xml
+++ b/app/src/main/res/layout/activity_observer_field.xml
@@ -1,25 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:app="http://schemas.android.com/apk/res-auto"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
         <variable
             name="user"
-            type="com.valleytech.databindingdemo.User" />
+            type="com.valleytech.databindingdemo.observerfield.User" />
+
     </data>
 
-    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".basicdatabinding.BasicBindingActivity">
+        tools:context=".MainActivity">
 
         <TextView
             android:id="@+id/label_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@{user.name}"
-            android:textSize="26sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
@@ -30,10 +31,9 @@
             android:id="@+id/btn_click"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Change Value"
-            app:layout_constraintStart_toStartOf="@+id/label_text"
+            android:text="Change value"
+            app:layout_constraintStart_toStartOf="@id/label_text"
             app:layout_constraintTop_toBottomOf="@+id/label_text" />
-
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
